--- a/hackathon/MK/NeuronStructNavigator/NeuronStructNavigator.vcxproj
+++ b/hackathon/MK/NeuronStructNavigator/NeuronStructNavigator.vcxproj
@@ -125,7 +125,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Vaa3D_2013_Qt486\vaa3d_tools\hackathon\MK\v3d_imgAnalyzerMK;C:\boostLibs\boost_1_61_0;C:\Qt\4.8.6\include\QtGui;C:\Qt\4.8.6\include\QtCore;C:\Qt\4.8.6\include;C:\Qt\4.8.6\mkspecs\win32-msvc2013;C:\Vaa3D_2013_Qt486\v3d_external\v3d_main\basic_c_fun;C:\Vaa3D_2013_Qt486\v3d_external\v3d_main\common_lib\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Vaa3D_2013_Qt486\v3d_external\v3d_main\neuron_editing;C:\Vaa3D_2013_Qt486\vaa3d_tools\hackathon\MK\v3d_imgAnalyzerMK;C:\boostLibs\boost_1_61_0;C:\Qt\4.8.6\include\QtGui;C:\Qt\4.8.6\include\QtCore;C:\Qt\4.8.6\include;C:\Qt\4.8.6\mkspecs\win32-msvc2013;C:\Vaa3D_2013_Qt486\v3d_external\v3d_main\basic_c_fun;C:\Vaa3D_2013_Qt486\v3d_external\v3d_main\common_lib\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -144,6 +144,8 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\..\v3d_external\v3d_main\basic_c_fun\basic_surf_objs.cpp" />
     <ClCompile Include="..\..\..\..\v3d_external\v3d_main\basic_c_fun\v3d_message.cpp" />
+    <ClCompile Include="..\..\..\..\v3d_external\v3d_main\neuron_editing\neuron_format_converter.cpp" />
+    <ClCompile Include="..\..\..\..\v3d_external\v3d_main\neuron_editing\v_neuronswc.cpp" />
     <ClCompile Include="NeuronStructExplorer.cpp" />
     <ClCompile Include="NeuronStructUtilities.cpp" />
     <ClCompile Include="PointCluster_formulator.cpp" />
