--- a/hackathon/MK/v3d_imgManagerMK/v3d_imgManagerMK.vcxproj
+++ b/hackathon/MK/v3d_imgManagerMK/v3d_imgManagerMK.vcxproj
@@ -67,7 +67,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>.</OutDir>
+    <OutDir>.\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
