--- a/hackathon/MK/tester/myTester.vcxproj
+++ b/hackathon/MK/tester/myTester.vcxproj
@@ -145,7 +145,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalLibraryDirectories>C:\boostLibs\boost_1_61_0\lib64-msvc-12.0;C:\opencv-3.4.0\VS2013_build\install\x64\vc12\lib;C:\Qt\4.8.6\lib;C:\Vaa3D_2013_Qt486\vaa3d_tools\hackathon\MK\NeuronStructNavigator;C:\Vaa3D_2013_Qt486\vaa3d_tools\hackathon\MK\v3d_imgAnalyzerMK;C:\Vaa3D_2013_Qt486\vaa3d_tools\hackathon\MK\v3d_imgManagerMK;C:\Vaa3D_2013_Qt486\vaa3d_tools\hackathon\MK\v3d_imgProcessorMK;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>NeuronStructNavigator.lib;v3d_imgAnalyzerMK.lib;v3d_imgManagerMK.lib;QtCore4.lib;QtGui4.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>NeuronStructNavigator.lib;v3d_imgManagerMK.lib;QtCore4.lib;QtGui4.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
