--- a/hackathon/MK/tester/myTester.vcxproj.filters
+++ b/hackathon/MK/tester/myTester.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="imgTester.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="processMonitoringTester.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
